2000-12-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* session.scm (apropos):  Completed the last patch, which did only
	half the job.  Thanks to Dale P. Smith.

2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* session.scm (apropos, apropos-fold):  There are no weak bindings
	any more.

2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (top-repl):  Lookup 'use-emacs-interface in
	the-root-module.

2000-12-07  Neil Jerram  <neil@ossau.uklinux.net>

	* emacs.scm (flush-whitespace): Fix spelling typo ("recieving").

2000-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (read-delimited), lineio.scm
	(make-line-buffering-input-port), regex.scm (match:prefix,
	match:suffix, match:substring, regexp-substitute/global), slib.scm
	(slib-parent-dir), string-fun.scm (split-after-char,
	split-before-char, split-discarding-char, split-after-char-last,
	split-before-char-last, split-discarding-char-last,
	split-before-predicate, split-after-predicate,
	split-discarding-predicate, separate-fields-discarding-char,
	separate-fields-after-char, separate-fields-before-char,
	string-prefix-predicate, sans-surrounding-whitespace,
	sans-trailing-whitespace, sans-leading-whitespace,
	sans-final-newline):  Use substring instead of
	make-shared-substring.

2000-11-26  Gary Houston  <ghouston@arglist.com>

	* boot-9.scm: values?, get-values, values, call-with-values:
	removed.  values and call-with-values are now primitives and
	the other two were only exported by accident.  don't define
	*values-rtd* record type or handle multiple values in
	scm-style-repl.

2000-11-07  Gary Houston  <ghouston@arglist.com>

	* popen.scm (open-output-pipe): added docstrings for open-input-pipe
	and open-output-pipe.

2000-11-06  Gary Houston  <ghouston@arglist.com>

	* popen.scm (open-process): bug fix: don't use
	close-all-ports-except to close ports in the child process, since
	it causes port buffers to be flushed.  they may be flushed again